<!--
  ~ Copyright 2017 WBinaryTree
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Costy</string>
    <string name="action_settings">Settings</string>
    <string name="tmp_cost">$400</string>
    <string name="income_title">Income</string>
    <string name="outcome_title">Expense</string>
    <string name="total_title">Balance</string>
    <string name="img_desc">account_type</string>
    <string name="loading">loading</string>
    <string name="title_main">Home</string>
    <string name="tmp_detail_desc">Carrefour shop</string>
    <string name="tmp_date">2017-02-22 : 17h35</string>
    <string name="account_transition">account_transition</string>
    <string name="access_token">pk.eyJ1Ijoid2JpbmFyeXRyZWUiLCJhIjoiY2l6anAybDl6MDAyaTJ3cW5qbWw3ejJ5ZiJ9.henMg4JSWC2kWubZghxpjw</string>
    <string name="local_user_data_account">data_account</string>
    <string name="mount">Mount</string>
    <string name="toolbar_transition">toolbar_image_trans</string>
    <string name="hidden">Hidden</string>
    <string name="login">Login</string>
    <string name="title_activity_login_test">Login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in_with_google">sign in with google</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_long">Don\'t have an account? \n {Sign up} here!</string>
    <string name="msg_error_login">Email or Password is not validate</string>
    <string name="username">nickname</string>
    <string name="error_nick_name">This nickname is now allowed!</string>
    <string name="title_retry">Retry</string>
    <string name="title_summary">Summary</string>
    <string name="title_transaction_add">New Income/Expense</string>
    <string name="account_name">Account Name</string>
    <string name="error_title_sync">Sorry, We meet some errors with Syncing</string>
    <string name="title_sync_done">Sync finished</string>
    <string name="title_no_account">You don\'t have an account yet!\n  Press the add button on top to add your account!</string>
    <string name="title_no_transaction">You don\'t have any transaction yet!</string>

    <string name="title_add_account">add_account</string>
    <string name="title_about">About Costy</string>
    <string name="title_log_out">Logout</string>
    <string name="title_chart">Pie chart</string>
</resources>
