<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_weight="10"
        android:gravity="left"
        android:id="@+id/tv_date"
        android:text="@string/tmp_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:visibility="gone"
        android:layout_weight="10"
        android:gravity="right"
        android:id="@+id/tv_detail_desc"
        android:text="@string/tmp_detail_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

        <TextView
            android:gravity="right"
            android:layout_weight="10"
            android:textColor="@color/limeGreen"
            android:id="@+id/tv_number"
            android:text="@string/tmp_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:visibility="gone"
            android:gravity="center"
            android:layout_weight="10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_title_type"
            android:text="@string/outcome_title"
            />


    </LinearLayout>


</LinearLayout>