<!--
  ~ Copyright 2017 WBinaryTree
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.phoenix.soft.costy.MainActivity">
    <item
        android:id="@+id/action_icon"
        android:icon="@drawable/ic_pie_chart_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/title_chart"/>
    <item
        android:id="@+id/action_plus"
        android:icon="@drawable/ic_person_add_white_24dp"
        app:showAsAction="always"
        android:title="@string/title_add_account"/>
<!--
        app:actionViewClass="android.support.v7.widget.SearchView"-->

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/title_log_out"
        app:showAsAction="never|collapseActionView" />

</menu>
